--- a/InventarioMS/src/main/resources/application.properties
+++ b/InventarioMS/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=${URL_DB:mongodb+srv://FarmaTIC:farmaticapp@inventariodb.llu1e.mongodb.net/myFirstDatabase?retryWrites=true&w=majority}
+server.port=${PORT:8080}
